Add h1, h2, h3 color styles and add dummy text to paragraphs

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,17 @@ p {
 font-family: 'Oswald', sans-serif;
 }
 
-h {
-
+h1 {
+color: #0000f0;
 }
+
+h2 {
+  color: #37bebe;
+  }
+
+h2 {
+  color: #cf3883;
+  }
 
 ul {
 
