--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,17 @@ h2 {
   }
 
 ul {
-
+  color: #b0dd33;
 }
 
 ol {
-
+  color: #eca53b;
 }
 
 li {
-
+  color: #bbabe7;
 }
 
+img {
+  float: left;
+}
