Add final About Me content.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,5 +27,5 @@ li {
   max-height: 500px;
   display: flex;
   flex-flow: column wrap;
-  background-color: #98bef0;
+  background-color: #bcd3f1;
 }
